Opened 5 years ago
Closed 5 years ago
#16108 closed bug (fixed)
Wrong file name mention in Installer text
Reported by: | bitigchi | Owned by: | nobody |
---|---|---|---|
Priority: | normal | Milestone: | R1/beta3 |
Component: | Applications/Installer | Version: | R1/Development |
Keywords: | Cc: | ||
Blocked By: | Blocking: | ||
Platform: | All |
Description
Installer mentions that on Desktop, there would be Welcome and User Guide files to read. However, latest beta has Quick Tour and User Guide instead.
Change History (1)
comment:1 by , 5 years ago
Milestone: | Unscheduled → R1/beta3 |
---|---|
Resolution: | → fixed |
Status: | new → closed |
Note:
See TracTickets
for help on using tickets.
Fixed in hrev54250