Fix 'EULA' to mention the Quick Tour instead of Welcome page

Fixes #16108

Change-Id: Ib19b8950f6ed946444a94581f578af39f4e04bf4
Reviewed-on: https://review.haiku-os.org/c/haiku/+/2787
Reviewed-by: Emir Sarı <bitigchi@me.com>
Reviewed-by: waddlesplash <waddlesplash@gmail.com>